working on the rotes

--- a/package.json
+++ b/package.json
@@ -9,19 +9,10 @@
     "bootstrap": "^4.6.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.0"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/AlheliMi/my_Updated_Portfolio.git"
-  },
-  "author": "Alheli Miranda",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/AlheliMi/my_Updated_Portfolio/issues"
-  },
-  "homepage": "https://github.com/AlheliMi/my_Updated_Portfolio#readme",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
