--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "my_updated_portfolio",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://alhelimi.github.io/my_Updated_Portfolio/",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.34",
     "@fortawesome/free-brands-svg-icons": "^5.15.2",
@@ -12,6 +13,7 @@
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.1",
     "bootstrap": "^4.6.0",
+    "gh-pages": "^3.1.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
@@ -21,10 +23,13 @@
     "webpack-cli": "^4.5.0"
   },
   "scripts": {
+
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -b master -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -48,4 +53,5 @@
     "@fortawesome/fontawesome-free": "^5.15.2",
     "css-loader": "^4.3.0"
   }
+ 
 }
