--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "my_updated_portfolio",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://alhelimi.github.io/my_Updated_Portfolio/",
+  "homepage": "https://alhelimi.github.io/my_Updated_Portfolio",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.34",
     "@fortawesome/free-brands-svg-icons": "^5.15.2",
